--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-540.7KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-510.9KB/s(Youtube:不良林), server: dd004.zhuan666.top, port: 11604, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
-  - {name: 未知国家-2.22MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
-  - {name: 🇨🇳 中国-5.71MB/s(Youtube:不良林), server: rr006.zhuan666.top, port: 11206, type: ss, cipher: chacha20-ietf-poly1305, password: 8c313190-4d93-43f3-b557-fe0ffe4c260a}
-  - {name: 🇨🇳 中国-436.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-368.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-479.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-320.9KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-391.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-977.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1006.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.07MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.83MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: cc4.qweasdzxc.gq, port: 45747, type: ss, cipher: chacha20-ietf-poly1305, password: 6ThhE43itV3}
+  - {name: 未知国家-312.5KB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-851.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.74MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-540.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.9KB/s(Youtube:不良林)
-      - 未知国家-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-368.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-391.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-977.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1006.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 未知国家-312.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
