--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-173.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-343.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-280.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-851.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.57MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-301.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-334.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 卢森堡-5.93MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-371.3KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: node-us-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-us-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-562.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.28MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-173.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-301.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.1KB/s(Youtube:不良林)
-      - 卢森堡-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
