--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-280.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-851.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-267.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-355.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-562.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.28MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 未知国家-4.81MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇨🇳 中国-489.9KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-403.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇫🇷 法国-1.39MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-320.0KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇨🇳 中国-508.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-333.0KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.26MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-280.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-851.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-355.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-562.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 未知国家-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-320.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-508.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
